第二部分mine基本完成

--- a/find_password.html
+++ b/find_password.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         <p><span>首页</span> > 找回密码</p>
-        <form action="" id="find">
+        <div action="" id="find">
             <input type="text" placeholder="请输入手机号" value="">
             <input type="text" placeholder="请输入短信中的验证码" value="">
             <input type="password" placeholder="请输入新密码" value="">
@@ -32,7 +32,7 @@
             <span class="code">√</span>
             <span class="psd1">√</span>
             <span class="psd2">√</span>
-        </form>
+        </div>
         <button id="yzm">发送验证码</button>
     </main>
 </body>
