--- a/login.html
+++ b/login.html
@@ -26,20 +26,20 @@
             <span>普通登录</span>
             <span>验证码快捷登录</span>
         </div>
-        <form action="" id="normal">
+        <div id="normal" class="form">
             <input type="text" placeholder="请输入手机号" value="">
             <input type="password" placeholder="密码登录" value="">
             <input type="submit" value="立即登录">
             <span class="phone">√</span>
             <span class="psd">√</span>
-        </form>
-        <form action="" id="code">
+        </div>
+        <div id="code" class="form">
             <input type="text" placeholder="请输入手机号">
             <input type="text" placeholder="请输入短信中的验证码">
             <input type="submit" value="立即登录">
             <span class="phone">√</span>
             <span class="psd">√</span>
-        </form>
+        </div>
         <button id="yzm">发送验证码</button>
         <div id="btn">
             <span>立即注册</span>
