哈哈哈哈哈，完成了

--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
     <title>首页</title>
     <link rel="stylesheet" href="./css/hf.css">
     <link rel="stylesheet" href="./css/index.css">
-    <script src=""></script>
+    <script src="./js/redirect.js"></script>
 </head>
 
 <body>
     <!--头部-->
     <header>
         <div class="left"><a href="javascript:;"><img src="./image/index/logo.jpg" alt="" /></a></div>
-
         <div class="right">
             <a href="javascript:;"><img src="./image/index/my.jpg" alt="" /></a>
             <a href="javascript:;"><img src="./image/index/xiazai.jpg" alt="" /></a>
