--- a/login.html
+++ b/login.html
@@ -14,9 +14,8 @@
      <!--头部-->
     <header>
         <div class="left"><a href="javascript:;"><img src="./image/index/logo.jpg" alt=""/></a></div>
-
         <div class="right">
-            <a href="javascript:;"> <img src="./image/index/my.jpg" alt=""/></a>
+            <a href="javascript:;"><img src="./image/index/my.jpg" alt=""/></a>
             <a href="javascript:;"><img src="./image/index/xiazai.jpg" alt=""/></a>
         </div>
     </header>
@@ -52,3 +51,4 @@
 <script src="./js/touch.min.js"></script>
 <script src="./js/login.js"></script>
 <script src="./js/rem.js"></script>
+<script src="./js/redirect.js"></script>
