--- a/mine1.html
+++ b/mine1.html
@@ -46,3 +46,4 @@
 <script src="./js/touch.min.js"></script>
 <script src="./js/mine1.js"></script>
 <script src="./js/rem.js"></script>
+<script src="./js/redirect.js"></script>
