--- a/register.html
+++ b/register.html
@@ -39,3 +39,4 @@
 <script src="./js/touch.min.js"></script>
 <script src="./js/register.js"></script>
 <script src="./js/rem.js"></script>
+<script src="./js/redirect.js"></script>
