--- a/find_password.html
+++ b/find_password.html
@@ -16,7 +16,7 @@
         <div class="left"><a href="javascript:;"><img src="./image/index/logo.jpg" alt=""/></a></div>
 
         <div class="right">
-            <a href="javascript:;"> <img src="./image/index/my.jpg" alt=""/></a>
+            <a href="javascript:;"><img src="./image/index/my.jpg" alt=""/></a>
             <a href="javascript:;"><img src="./image/index/xiazai.jpg" alt=""/></a>
         </div>
     </header>
@@ -41,3 +41,4 @@
 <script src="./js/touch.min.js"></script>
 <script src="./js/find_password.js"></script>
 <script src="./js/rem.js"></script>
+<script src="./js/redirect.js"></script>
