--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         if (ajax.readyState == 4) {
             if (ajax.status == 200) {
                 var res = JSON.parse(ajax.responseText);
-                console.log(res);
+                // console.log(res);
                 show(res);
             }
         }
