--- a/my_house.html
+++ b/my_house.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>我的房子</title>
+    <title>仿我的房子</title>
     <link rel="stylesheet" href="./css/hf.css">
     <link rel="stylesheet" href="./css/my_house.css">
     <script src=""></script>
