'实现注册功能'

--- a/register.html
+++ b/register.html
@@ -25,7 +25,7 @@
         <div action="" id="register">
             <input type="text" placeholder="请输入手机号" value="">
             <input type="text" placeholder="请输入短信中的验证码" value="">
-            <input type="password" placeholder="请输入新密码" value="">
+            <input type="password" placeholder="请输入密码" value="">
             <input type="submit" value="提交">
             <span class="phone">√</span>
             <span class="code">√</span>
